[tool.poetry]
name = "pongpython"
version = "0.1.0"
description = "Jogo Pong desenvolvido em python"
authors = ["eversonott <everson.ott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
